rm scatter plot

--- a/train.ipynb
+++ b/train.ipynb
@@ -882,8 +882,7 @@
     "\n",
     "pred_test = sk_model.predict(test_x)\n",
     "\n",
-    "print('rmse: {} - mae: {} - r2: {}'.format(*eval_metrics(test_y, pred_test)))\n",
-    "scatter_plot_result(test_y, pred_test, 'ElasticNet')"
+    "print('rmse: {} - mae: {} - r2: {}'.format(*eval_metrics(test_y, pred_test)))"
    ]
   },
   {
