--- a/train.ipynb
+++ b/train.ipynb
@@ -34,6 +34,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Trick to avoid warning\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
@@ -59,6 +70,7 @@
     "import mlflow\n",
     "import mlflow.sklearn\n",
     "from matplotlib import pyplot as plt\n",
+    "%matplotlib inline\n",
     "from sklearn.metrics import classification_report"
    ]
   },
@@ -490,36 +502,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Preprocess"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-04-09T07:21:30.170761Z",
-     "start_time": "2019-04-09T07:21:30.142566Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "target_column = \"Appliances\" # \"y\"\n",
-    "\n",
-    "train, test = train_test_split(df_all) # default test size 1/4\n",
-    "\n",
-    "train_x = train.drop([target_column], axis=1)\n",
-    "test_x = test.drop([target_column], axis=1)\n",
-    "train_y = train[target_column]\n",
-    "test_y = test[target_column]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-09T07:23:17.162199Z",
@@ -541,7 +523,7 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score, make_scorer\n",
     "\n",
     "def eval_metrics(actual, pred):\n",
     "    rmse = np.sqrt(mean_squared_error(actual, pred))\n",
@@ -552,26 +534,78 @@
     "\n",
     "def scatter_plot_result(y_actual, y_pred, model_name):\n",
     "    plt.scatter(y_actual, y_pred)\n",
-    "    \n",
     "    plt.ylabel('Target predicted')\n",
     "    plt.xlabel('True Target')\n",
     "    plt.title(model_name)\n",
-    "    \n",
-    "    pos_x = y_actual.max() * 0.60\n",
-    "    pos_y = y_pred.max() * 0.90\n",
-    "    \n",
-    "    plt.text(pos_x, pos_y, r'$RMSE=%.2f, R^2$=%.2f, MAE=%.2f' % (np.sqrt(mean_squared_error(y_actual, y_pred)), \n",
+    "    plt.text(500, 250, r'$RMSE=%.2f, R^2$=%.2f, MAE=%.2f' % (np.sqrt(mean_squared_error(y_actual, y_pred)), \n",
     "                                              r2_score(y_actual, y_pred), \n",
     "                                              mean_absolute_error(y_actual, y_pred)))\n",
-    "    plt.savefig('./scatter_results-{}.png'.format(model_name))\n",
-    "    plt.close()"
+    "    plt.savefig('./scatter_results-{}.png'.format(model_name)) # Save to be included in Artefacts\n",
+    "    plt\n",
+    "    \n",
+    "\n",
+    "def plot_cv_results(iMetric, iResCV):\n",
+    "    # multiple line plot\n",
+    "    plt.plot(range(1,6)\n",
+    "             , iResCV[\"test_\" + iMetric]\n",
+    "             , marker='o'\n",
+    "             , markerfacecolor='blue'\n",
+    "             , markersize=12, color='skyblue'\n",
+    "             , linewidth=4)\n",
+    "    plt.plot(range(1,6)\n",
+    "             , iResCV[\"train_\" + iMetric]\n",
+    "             , marker='o'\n",
+    "             , markerfacecolor='red'\n",
+    "             , markersize=12\n",
+    "             , color='red'\n",
+    "             , linewidth=4)\n",
+    "    plt.xticks(range(1,6))\n",
+    "    plt.legend(('test','train'))\n",
+    "    plt.title(iMetric)\n",
+    "    plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Build our first model"
+    "## Preprocess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-09T07:21:30.170761Z",
+     "start_time": "2019-04-09T07:21:30.142566Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split, cross_validate, cross_val_predict\n",
+    "\n",
+    "target_column = \"Appliances\" # \"y\"\n",
+    "\n",
+    "# Create the scorings dict\n",
+    "scorings = {'mse' : make_scorer(mean_squared_error)\n",
+    "         ,\"mae\" : make_scorer(mean_absolute_error)\n",
+    "         ,\"r2\" : make_scorer(r2_score)\n",
+    "          }\n",
+    "\n",
+    "# Split features and targets\n",
+    "y = df_all[target_column]\n",
+    "X = df_all.drop([target_column], axis=1)\n",
+    "\n",
+    "# Nb Cross Val\n",
+    "CV = 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build our first model : [Random Forest Regressor](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html)"
    ]
   },
   {
@@ -595,23 +629,46 @@
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
+    "# Instantiate model\n",
+    "rfr = RandomForestRegressor(random_state=0, n_estimators=100)\n",
+    "\n",
     "# Train model\n",
-    "rfp = RandomForestRegressor(random_state=0, n_estimators=100)\n",
-    "model = rfp.fit(train_x, train_y)\n",
-    "\n",
-    "\n",
-    "pred_test = model.predict(test_x)\n",
-    "\n",
-    "print('rmse: {} - mae: {} - r2: {}'.format(*eval_metrics(test_y, pred_test)))\n",
-    "scatter_plot_result(test_y, pred_test, 'RandomForest')"
+    "model = cross_validate(rfr, X, y, scoring=scorings, cv=CV, n_jobs=-1, return_train_score=True)\n",
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the cross val results\n",
+    "plot_cv_results(metric_to_plot, model)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To see scatter plot result: [see_plot](./scatter_results-RandomForest.png)\n",
-    "\n",
+    "What do you think about this model?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make prediction\n",
+    "y_pred = cross_val_predict(rfr, X, y, cv=CV, n_jobs=-1, verbose=1)\n",
+    "scatter_plot_result(y, y_pred, 'RandomForest')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "-> `Retrain your model with another set of parameters and compare results`"
    ]
   },
@@ -651,25 +708,74 @@
     "from sklearn.linear_model import ElasticNet\n",
     "from sklearn.preprocessing import QuantileTransformer, quantile_transform\n",
     "\n",
+    "# Instantiate model\n",
+    "en = ElasticNet(random_state=0, alpha=0.5, l1_ratio=0.2)\n",
     "\n",
     "# Train model\n",
-    "lr = ElasticNet(random_state=0, alpha=0.5, l1_ratio=0.2)\n",
-    "model = lr.fit(train_x, train_y)\n",
+    "model = cross_validate(en, X, y, scoring=scorings, cv=CV, n_jobs=-1, return_train_score=True)\n",
+    "print(model)\n",
     "\n",
+    "# Plot Cross val\n",
+    "plot_cv_results(\"r2\", model)\n",
     "\n",
-    "pred_test = model.predict(test_x)\n",
-    "\n",
-    "print('rmse: {} - mae: {} - r2: {}'.format(*eval_metrics(test_y, pred_test)))\n",
-    "scatter_plot_result(test_y, pred_test, 'ElasticNet')"
+    "# Make prediction\n",
+    "y_pred = cross_val_predict(en, X, y, cv=CV, n_jobs=-1, verbose=1)\n",
+    "scatter_plot_result(y, y_pred, 'ElasticNet')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To see scatter plot result: [see_plot](./scatter_results-ElasticNet.png)\n",
-    "\n",
     "-> `Retrain your model with another set of parameters and compare results`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Optionnel : Understand your model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [SHAP](https://github.com/slundberg/shap)\n",
+    "A unified approach to explain the output of any machine learning model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shap\n",
+    "# load JS visualization code to notebook\n",
+    "shap.initjs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# explain the model's predictions using SHAP values\n",
+    "# (same syntax works for LightGBM, CatBoost, and scikit-learn models)\n",
+    "explainer = shap.TreeExplainer(model)\n",
+    "shap_values = explainer.shap_values(train_x, approximate=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# summarize the effects of all the features\n",
+    "shap.summary_plot(shap_values, train_x)"
    ]
   },
   {
@@ -909,7 +1015,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
