--- a/train.ipynb
+++ b/train.ipynb
@@ -546,6 +546,19 @@
    "source": [
     "from sklearn.compose import TransformedTargetRegressor\n",
     "\n",
+    "def get_train_test_data(df):\n",
+    "    target_column = \"Appliances\"\n",
+    "    # Split data\n",
+    "    train, test = train_test_split(df)\n",
+    "\n",
+    "    train_x = train.drop([target_column], axis=1)\n",
+    "    test_x = test.drop([target_column], axis=1)\n",
+    "    train_y = train[target_column]\n",
+    "    test_y = test[target_column]\n",
+    "\n",
+    "    return train_x, train_y, test_x, test_y\n",
+    "\n",
+    "\n",
     "# If you wish to try on classification problem\n",
     "def log_metrics_classification(y_true, y_prediction):\n",
     "    report = classification_report(y_true, y_prediction, output_dict=True)\n",
@@ -605,6 +618,8 @@
     "        log_metrics_regression(model)\n",
     "\n",
     "        # log sklearn model\n",
+    "        train_x, train_y, test_x, test_y = get_train_test_data(df)\n",
+    "        lr.fit(train_x, train_y)\n",
     "        # log the sklearn model here  ~ 1 line\n",
     "        "
    ]
